# e_library

./: .env.example  .gitignore  pyproject.toml
app/: __main__.py  logger.py  settings.py
app/backend/: client.py  client_old.py
app/backend/db/: db_connection.py  models.py
app/backend/repository/: book_repository.py
app/frontend/: app.py  tab_manager.py  ui_components.py
app/frontend/assets/: theme.py
app/frontend/forms/: book_form.py
app/frontend/tabs/: main_tab.py
app/models/: models.py
