[project]
name = "e-library"
version = "0.1.0"
description = ""
authors = [
    {name = "Bauyrzhan Zhanuzakov",email = "zhanuzakovb@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flet (>=0.27.6,<0.28.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
